apps/tron/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tron
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: tron
  template:
    metadata:
      labels:
        app: tron
    spec:
      volumes:
        - name: users
          persistentVolumeClaim:
            claimName: users
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: app
          volumeMounts:
            - name: users
              mountPath: /app/users
            - name: data
              mountPath: /app/data
          image: ghcr.io/tronbyt/server:sha256-c390a26f21b1cab2a8081528c222b97cc8801dd8603be6388a84b1b793e5f270
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet: { path: /a6cf8d53/next, port: http } # trying to see if this helps with stability
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /a6cf8d53/next, port: http } # trying to see if this helps with stability
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 3
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: tron
spec:
  selector:
    app: tron
  ports:
    - name: http
      port: 80
      targetPort: http                 # matches the container's named port
